syntax = "proto3";
package helloWorld;

service Greeter {
    rpc sayHello (HelloRequest) returns (HelloResponse) {}
}
message HelloRequest {
    string name = 1;
}
message HelloResponse {
    string name = 2;
}